# LRI-RCI-CPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GithubRelease.sh  README.md
arduino/: RCP.h  sketch_oct6a.ino  testbench.ino
cmake/: gen_resources.cmake  gen_version.cmake  generate-font-objs.cmake
docs/: json.md  testing.md  usage.md
include/: EmbeddedResource.h  RCP_Host_Impl.h  RingBuffer.h  RingBuffer.inl  VERSION.h  WindowsResource.h  fontawesome.h  improgress.h  rendering.h  setup.h  utils.h
include/UI/: AngledActuatorViewer.h  BaseUI.h  BoolSensorViewer.h  COMPortChooser.h  CustomData.h  EStop.h  EStopViewer.h  ErrorWindow.h  PacketBuilder.h  Prompt.h  PromptViewer.h  RawViewer.h  SensorReadings.h  SensorViewer.h  Sidebar.h  SimpleActuatorViewer.h  SolenoidViewer.h  Solenoids.h  StepperViewer.h  Steppers.h  TargetChooser.h  TestControl.h  TestStateViewer.h  TopBar.h  UIControl.h  WModule.h  Windowlet.h  positioning.h  style.h
include/UI/connection/: SerialPort.h  TargetConnect.h
include/UI/hardview/: BoolSensorViewer.h  EStopViewer.h  ErrorWindow.h  MotorViewer.h  PromptViewer.h  RawViewer.h  SensorViewer.h  SimpleActuatorViewer.h  StepperViewer.h  TargetChooser.h  TestStateViewer.h  WModule.h
include/data/: EventLog.h  HardwareControl.h  HardwareQualifier.h
include/devices/: COMPort.h  RCP_Interface.h
include/hardware/: AngledActuator.h  BoolSensor.h  EStop.h  EventLog.h  HardwareControl.h  HardwareQualifier.h  Motors.h  Prompt.h  RawData.h  Sensors.h  SimpleActuators.h  Solenoids.h  Steppers.h  TargetLog.h  TestState.h
include/interfaces/: COMPort.h  ICOMPort.h  IOInterface.h  LinuxCOMPort.h  RCP_Interface.h  TCPSocket.h  VirtualPort.h  WindowsCOMPort.h
resources/: resources.rc
src/: LinuxEmbeddedResource.cpp  RCP_Host_Impl.cpp  WindowsEmbeddedResource.cpp  WindowsResource.cpp  improgress.cpp  main.cpp  rendering.cpp  setup.cpp  utils.cpp
src/UI/: AngledActuatorViewer.cpp  BaseUI.cpp  BoolSensorViewer.cpp  COMPortChooser.cpp  CustomData.cpp  EStop.cpp  EStopViewer.cpp  ErrorWindow.cpp  MotorViewer.cpp  PacketBuilder.cpp  Prompt.cpp  PromptViewer.cpp  RawViewer.cpp  SensorReadings.cpp  SensorViewer.cpp  Sidebar.cpp  SimpleActuatorViewer.cpp  SolenoidViewer.cpp  Solenoids.cpp  StepperViewer.cpp  Steppers.cpp  TargetChooser.cpp  TargetConnect.cpp  TestControl.cpp  TestStateViewer.cpp  TopBar.cpp  UIControl.cpp  Windowlet.cpp
src/UI/connection/: SerialPort.cpp  TargetConnect.cpp
src/UI/hardview/: AngledActuatorViewer.cpp  BoolSensorViewer.cpp  EStopViewer.cpp  ErrorWindow.cpp  MotorViewer.cpp  PromptViewer.cpp  RawViewer.cpp  SensorViewer.cpp  SimpleActuatorViewer.cpp  StepperViewer.cpp  TargetChooser.cpp  TestStateViewer.cpp  Windowlet.cpp
src/data/: EventLog.cpp  HardwareControl.cpp
src/devices/: COMPort.cpp
src/hardware/: AngledActuator.cpp  BoolSensor.cpp  EStop.cpp  EventLog.cpp  HardwareControl.cpp  HardwareQualifier.cpp  Motors.cpp  Prompt.cpp  RawData.cpp  Sensors.cpp  SimpleActuators.cpp  Solenoids.cpp  Steppers.cpp  TargetLog.cpp  TestState.cpp
src/interfaces/: COMPort.cpp  ICOMPort.cpp  IOInterface.cpp  LinuxCOMPort.cpp  LinuxSerialPort.cpp  TCPSocket.cpp  VirtualPort.cpp  WindowsCOMPort.cpp
targets/: ablative_stand.json  ablative_stand.json.ini  bangbang.json  bangbang.json.ini  digital_tripper.json  electric_angel.json  electric_angel.json.ini  overture_box.json  overture_box.json.ini  pumps_stand.json  pumps_stand.json.ini  test_stand.json  test_stand.json.ini
testbench/: LRIRingBuf.h  RCP.cpp  RCP.h  test.cpp  test.h  testbench.ino
wix/: RCI_installer.xml
